snapshots/syntax/statements/control_flow/exit_resume/exit_function.snap
---
source: vb6parse/src/syntax/statements/control_flow/exit_resume.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: FunctionStatement
      children:
        - kind: FunctionKeyword
          text: Function
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: IntegerKeyword
          text: Integer
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: x
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "0"
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: ExitStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: ExitKeyword
                          text: Exit
                        - kind: Whitespace
                          text: " "
                        - kind: FunctionKeyword
                          text: Function
                    - kind: Newline
                      text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: Test
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "42"
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
        - kind: Newline
          text: "\n"
